--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,12 +4,18 @@ android {
     compileSdkVersion 24
     buildToolsVersion "24.0.1"
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
     defaultConfig {
         applicationId "com.example.molliestephenson.tictactoe"
         minSdkVersion 23
         targetSdkVersion 24
         versionCode 1
         versionName "1.0"
+        jackOptions { enabled true }
     }
     buildTypes {
         release {
@@ -20,7 +26,9 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.1.1'
+    compile files('libs/TicTacToe.jar')
+    compile files('libs/TicTacToe-2.1.0.jar')
 }
