--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,8 @@ android:
     - extra-android-m2repository
     - addon-google_apis-google-19
 
-    - sys-img-armeabi-v7a-android-22
+    - sys-img-armeabi-v7a-android-24
     - sys-img-x86-android-17
+
+script:
+    - ./gradlew test
