--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.example.molliestephenson.tictactoe"
+        applicationId "tictactoe"
         minSdkVersion 23
         targetSdkVersion 24
         versionCode 1
