--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="tictactoe">
+          package="mollie.tictactoe">
 
     <application
         android:allowBackup="true"
@@ -8,9 +8,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="tictactoe.MainActivity">
+        <activity android:name=".MainActivity">
     </activity>
-    <activity android:name="tictactoe.MenuActivity">
+    <activity android:name=".MenuActivity">
         <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
 
